# price-api-bot

./: .gitignore  Cargo.toml  README.md  sync-chart.sh
chart/: diff.html  diff.ts  generate.ts
src/: lib.rs  main.rs
