[package]
name = "dot-price"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dot-price"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
futures = "0.3"
anyhow = "1"
